<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gruyo</string>
    
    <string name="add_medication">Add Medication</string>
    <string name="required_fields">*Required Fields</string>
    <string name="medication_information">Medication Information</string>
    <string name="medication">*Medication</string>
    <string name="reason_for_taking">*Reason for Taking</string>
    <string name="how_many">*How Many</string>
    <string name="how_often">*How Often</string>
    <string name="med_as_needed">I take this medication as needed</string>
    <string name="upload_photo"><u>Upload Photo</u></string>
    
    <string name="additional_info">Additional Information</string>
    <string name="quantity">Quantity</string>
    <string name="number_of_refills">Number of Refills</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="prescrib_dr">Prescribing Doctor</string>
    <string name="pharmacy">Pharmacy Where Filled</string>
    
    <string name="prescription_refill">Prescription Refill Reminders</string>
    <string name="refill_reminders">Refill Reminders</string>
    <string name="select_number_days">Select Number of Days</string>
    <string name="save">Save</string>

</resources>
